--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 app.jwtSecret=taCleSecreteSuperSecrete
 app.jwtExpirationMs=3600000
+
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.backendgroupgenerateur=DEBUG
+logging.level.org.springframework.web.filter=DEBUG
