--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-app.jwtSecret=taCleSecreteSuperSecrete
+app.jwtSecret=MA_SUPER_CLE_SECRET3_HYP3R_LONGUE_ET_COMPLEX3_QUI_FAIT_64_OCTETS_MINIMUM_!!
 app.jwtExpirationMs=3600000
 
 logging.level.org.springframework.security=DEBUG
